--- a/style.css
+++ b/style.css
@@ -7,21 +7,37 @@
 body {
     font-family: 'Poppins', 'Ubuntu', sans-serif;
     margin: 0;
+    background-image: linear-gradient(120deg, black, rgba(169, 169, 169, 0.363));
+}
+
+h1, h2 {
+    text-align: center;
+    color: whitesmoke;
+}
+
+h2 {
+    font-weight: 200;
+}
+
+.image-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    background-image: linear-gradient(120deg, black, rgba(169, 169, 169, 0.363));
 }
 
 img {
-    width: 1280px;
-    height: 720px;
+    max-width: 1280px;
+    max-height: 720px;
     margin: 20px;
     position: relative;
+    border: 12px whitesmoke;
 }
 
 img:hover {
     opacity: 0.9;
+}
+
+img:focus {
+    outline: 0;
 }
