--- a/style.css
+++ b/style.css
@@ -95,6 +95,28 @@ h2 {
     justify-content: center;
 }
 
+.list {
+    padding: 0;
+    list-style-type: 0;
+}
+
+.list li {
+    margin: 12px 0;
+    padding-top: 10px;
+}
+
+.list li a {
+    color: whitesmoke;
+    font-size: 16px;
+    text-decoration: none;
+}
+
+.list li ul {
+    list-style-type: none;
+    padding-left: 25px;
+    padding-top: 10px;
+}
+
 img {
     max-width: 1280px;
     max-height: 720px;
