--- a/style.css
+++ b/style.css
@@ -8,6 +8,15 @@ body {
     font-family: 'Poppins', 'Ubuntu', sans-serif;
     margin: 0;
     background-image: linear-gradient(120deg, black, rgba(169, 169, 169, 0.363));
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    overflow: hidden;
+    background-position: center center;
+    background-size: cover;
+    transition: 0.5s ease;
 }
 
 h1, h2 {
