--- a/style.css
+++ b/style.css
@@ -19,6 +19,16 @@ body {
     transition: 0.5s ease;
 }
 
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
+}
+
 h1, h2 {
     text-align: center;
     color: whitesmoke;
