--- a/style.css
+++ b/style.css
@@ -29,6 +29,27 @@ body::before {
     z-index: -1;
 }
 
+.slider-container {
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    height: 70vh;
+    width: 70vw;
+    position: relative;
+    overflow: hidden;
+}
+
+.slide {
+    opacity: 0;
+    height: 100vh;
+    width: 100vw;
+    background-position: center center;
+    background-size: cover;
+    position: absolute;
+    top: -15vh;
+    left: -15vw;
+    transition: 0.4s ease;
+    z-index: 1;
+}
+
 h1, h2 {
     text-align: center;
     color: whitesmoke;
@@ -136,12 +157,30 @@ h2 {
     padding-top: 10px;
 }
 
-img {
+.slide {
+    opacity: 0;
+    height: 100vh;
+    width: 100vw;
+    background-position: center center;
+    background-size: cover;
+    position: absolute;
+    top: -15vh;
+    left: -15vw;
+    transition: 0.4s ease;
+    z-index: 1;
+}
+
+.slide.active {
+    opacity: 1;
+}
+
+.slide img {
     max-width: 1280px;
     max-height: 720px;
     margin: 20px;
     position: relative;
     border: 12px whitesmoke;
+    opacity: 0;
 }
 
 img:hover {
@@ -150,4 +189,11 @@ img:hover {
 
 img:focus {
     outline: 0;
+}
+
+@media (max-width: 840px) {
+    .slider-container {
+        height: 85vh;
+        width: 85vw;
+    }
 }
