add arrow CSS for left and right

--- a/style.css
+++ b/style.css
@@ -191,6 +191,31 @@ img:focus {
     outline: 0;
 }
 
+.arrow {
+    position: fixed;
+    background-color: transparent;
+    padding: 20px;
+    font-size: 30px;
+    border: 2px solid orange;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
+
+.arrow:focus {
+    outline: 0;
+}
+
+.left-arrow {
+    left: calc(15vw - 65px);
+    color: #fff;
+}
+
+.right-arrow {
+    right: calc(15vw - 65px);
+    color: #fff;
+}
+
 @media (max-width: 840px) {
     .slider-container {
         height: 85vh;
