--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
     font-family: 'Poppins', 'Ubuntu', sans-serif;
     margin: 0;
-    background-image: linear-gradient(120deg, black, rgba(169, 169, 169, 0.363));
+    background-image: linear-gradient(120deg, black, rgba(169, 169, 169, 0.7));
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -175,8 +175,8 @@ h2 {
 }
 
 .slide img {
-    max-width: 1280px;
-    max-height: 720px;
+    max-width: 1152px;
+    max-height: 864px;
     margin: 20px;
     position: relative;
     border: 12px whitesmoke;
@@ -196,8 +196,9 @@ img:focus {
     background-color: transparent;
     padding: 20px;
     font-size: 30px;
-    border: 2px solid orange;
+    border: 2px solid rgba(255, 166, 0, 0.781);
     top: 50%;
+    margin-top: 67px;
     transform: translateY(-50%);
     cursor: pointer;
 }
