--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ h2 {
     height: 100vh;
     width: 100vw;
     background-position: center center;
+    display: block;
     background-size: cover;
     position: absolute;
     top: -15vh;
@@ -191,6 +192,21 @@ img:hover {
 
 img:focus {
     outline: 0;
+}
+
+.slide.active .info {
+    color: #fff;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    padding: 0.5rem 1rem 1rem;
+    flex-wrap: wrap;
+    height: 87vh;
+}
+
+.info h3 {
+    margin-top: 0;
+    text-align: center;
 }
 
 .arrow {
