Add info h3 text

--- a/style.css
+++ b/style.css
@@ -207,6 +207,9 @@ img:focus {
 .info h3 {
     margin-top: 0;
     text-align: center;
+    background-color: rgba(0, 0, 0, 0.4);
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 24px;
 }
 
 .arrow {
