--- a/style.css
+++ b/style.css
@@ -201,13 +201,14 @@ img:focus {
     justify-content: center;
     padding: 0.5rem 1rem 1rem;
     flex-wrap: wrap;
-    height: 87vh;
+    height: 89.5vh;
 }
 
 .info h3 {
     margin-top: 0;
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100vw;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 24px;
 }
