--- a/style.css
+++ b/style.css
@@ -69,6 +69,25 @@ h2 {
     color: whitesmoke;
 }
 
+.wiki-div {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    padding: 20px;
+}
+
+.wiki {
+    border: none;
+    background-color: rebeccapurple;
+    cursor: pointer;
+    border-radius: 10px;
+    font-size: 24px;
+    color: whitesmoke;
+    padding: 12px;
+}
+
+
 .open-btn {
     position: fixed;
     top: 20px;
