--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ h2 {
 
 .wiki {
     border: none;
-    background-color: rebeccapurple;
+    background-color: rgba(102, 51, 153, 0.582);
     cursor: pointer;
     border-radius: 10px;
     font-size: 24px;
