--- a/en/style.css
+++ b/en/style.css
@@ -66,7 +66,7 @@ h2 {
     top: 0;
     right: 0;
     height: 100vh;
-    padding-right: 100px;
+    padding-right: 110px;
     padding-top: 25px;
 }
 
@@ -274,6 +274,14 @@ img:focus {
 .right-arrow {
     right: calc(15vw - 67px);
     color: #fff;
+}
+
+.note {
+    display: inline-block;
+}
+
+.note h5 {
+    color: whitesmoke;
 }
 
 @media (max-width: 840px) {
